[package]
name = "rust-blogpost-auth-async"
version = "0.1.0"
authors = ["Leonel Espinoza"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.3.2"
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.131"
dotenv = "0.15.0"