[package]
name = "rust-blogpost-auth-async"
version = "0.1.0"
authors = ["Leonel Espinoza"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.3.2"
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.131"
serde_json = "1.0.72"
dotenv = "0.15.0"
actix-web-httpauth = "0.5.1"
alcoholic_jwt = "1.0.1"
reqwest = { version = "0.11.7", features = ["blocking", "json"] }
derive_more = "0.99.17"